--- a/src/html/calendarTeacher.html
+++ b/src/html/calendarTeacher.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Intranet - Calendrier enseigant</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/timetableUtil.js"></script>
