--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Intranet - Liste des Classes</title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -11,7 +11,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/classList.css" rel="stylesheet">
 
-    <link rel="manifest" href="manifest.json"}>
+    <link rel="manifest" href="manifest.webmanifest"}>
 
     <script>
         console.log('test');
